# krunner-text-search

./: CMakeLists.txt  README  README.md  balootextsearchrunner.cpp  balootextsearchrunner.h  plasma-runner-balootextsearch.desktop
